--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "graphql-resolvers": "^0.4.2",
     "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "nanoid": "^3.1.23",
     "nodemon": "^2.0.9"
